--- a/components/post_body.html
+++ b/components/post_body.html
@@ -1,4 +1,4 @@
 <!-- Scripts -->
-<script src="{{ 'assets/js/plugins.js' | relative_url }}"></script>
-<script src="{{ 'assets/js/main.js' | relative_url }}"></script>
-<script src="{{ 'assets/js/page-load.js' | relative_url }}"></script>
+<script src="{{ 'js/plugins.js' | relative_url }}"></script>
+<script src="{{ 'js/main.js' | relative_url }}"></script>
+<script src="{{ 'js/page-load.js' | relative_url }}"></script>
